--- a/Лабораторная2(Убейтенаспж)/TasksProject.xaml
+++ b/Лабораторная2(Убейтенаспж)/TasksProject.xaml
@@ -17,7 +17,7 @@
                     <GridView>
                         <GridViewColumn Header="Название задачи" DisplayMemberBinding="{Binding Title }"/>
                         <GridViewColumn Header="Описание" DisplayMemberBinding="{Binding Description }"/>
-                        <GridViewColumn Header="Ответственный" DisplayMemberBinding="{Binding Responsible}"/>
+                        <GridViewColumn Header="Ответственный" DisplayMemberBinding="{Binding Responsible.FIO}"/>
                         <GridViewColumn Header="Статус" DisplayMemberBinding="{Binding Status}"/>
                     </GridView>
                 </ListView.View>
@@ -35,6 +35,7 @@
             <Button Content="Добавить задачу" Click="OpenAddTask"/>
             <Button Content="Изменить задачу" Click="OpenUpdateTask" />
             <Button Content="Удалить задачу" Click ="DeleteTask"/>
+            <Button Content="Назначить отвественного" Click ="AssignResponsibleButton_Click"/>
         </StackPanel>
 
     </Grid>
